<resources>
    <string name="app_name">LearnKotlin</string>
    <string name="roll">roll</string>
    <string name="dice_app_name">DICE APP</string>
    <string name="hello_world">helloworld</string>
    <string name="color_my_view_app_box_one">BOX ONE</string>
    <string name="color_my_view_app_box_two">BOX TWO</string>
    <string name="color_my_view_app_box_three">BOX THREE</string>
    <string name="color_my_view_app_box_four">BOX FOUR</string>
    <string name="color_my_view_app_box_five">BOX FIVE</string>
    <string name="color_my_view_app_name">COLOR MY VIEW</string>
    <string name="color_my_view_app_how_to_play_button">How to play:</string>
    <string name="color_my_view_app_tap_box_and_button">Tap the Screen and Buttons</string>
    <string name="color_my_view_app_red_button">RED</string>
    <string name="color_my_view_app_yellow_button">YELLOW</string>
    <string name="color_my_view_app_green_button">GREEN</string>

    <string name="android_trivia_app_name">ANDROID TRIVIA</string>
    <string name="android_trivia_text_second_fragment">This is Second Fragment</string>
    <string name="android_trivia_game_over">Game Over</string>
    <string name="android_trivia_try_again">Try Again?</string>
    <string name="android_trivia_position">Position</string>
    <string name="android_trivia_select_an_avatar">Select an Avatar</string>
    <string name="android_trivia_android_trivia">Android Trivia</string>
    <string name="android_trivia_about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="android_trivia_rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="android_trivia_rules">Rules</string>
    <string name="android_trivia_about">About</string>
    <string name="android_trivia_trivia_hint">Trivia Hint</string>
    <string name="android_trivia_title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="android_trivia_title_about_trivia">About Trivia</string>
    <string name="android_trivia_title_trivia_rules">Trivia Rules</string>
    <string name="android_trivia_share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="android_trivia_submit_button">Submit</string>
    <string name="android_trivia_congratulations">Congratulations!</string>
    <string name="android_trivia_share">Share</string>
    <string name="android_trivia_sharing_not_available">Sharing Not Available</string>

    <string name="guess_the_word_skip_app_name">GUESS THE WORD</string>
    <string name="guess_the_word_skip">Skip</string>
    <string name="guess_the_word_play_again">Play Again</string>
    <string name="guess_the_word_you_scored">You Scored</string>
    <string name="guess_the_word_title_text">guess the word!</string>
    <string name="guess_the_word_play_button">Play</string>
    <string name="guess_the_word_get_ready">Get ready to</string>
    <string name="guess_the_word_got_it">Got it</string>
    <string name="guess_the_word_end_game">End game</string>
    <string name="guess_the_word_word_is">The word is…</string>

    <string name="common_welcome">Welcome!!!</string>
    <string name="common_play">PLAY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_game_over">GAME OVER</string>
    <string name="common_game_won">GAME WON</string>


</resources>
