<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color_my_app_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="codelabs.constraintlayout.ColorMyViewsAppActivity">

    <TextView
        android:id="@+id/color_my_view_box_1"
        style="@style/white_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:fontFamily="@font/roboto"
        android:text="@string/color_my_view_app_box_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/color_my_view_box_2"
        style="@style/white_box"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/color_my_view_app_box_two"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_my_view_box_1"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/color_my_view_box_3"
        style="@style/white_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/color_my_view_app_box_three"
        app:layout_constraintBottom_toTopOf="@+id/color_my_view_box_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@id/color_my_view_box_2"
        app:layout_constraintTop_toTopOf="@+id/color_my_view_box_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/color_my_view_box_4"
        style="@style/white_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_wide"
        android:text="@string/color_my_view_app_box_four"
        app:layout_constraintBottom_toTopOf="@+id/color_my_view_box_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/color_my_view_box_2"
        app:layout_constraintTop_toBottomOf="@+id/color_my_view_box_3" />

    <TextView
        android:id="@+id/color_my_view_box_5"
        style="@style/white_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/color_my_view_app_box_five"
        app:layout_constraintBottom_toBottomOf="@+id/color_my_view_box_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/color_my_view_box_2"
        app:layout_constraintTop_toBottomOf="@+id/color_my_view_box_4" />

    <TextView
        android:id="@+id/color_my_view_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:fontFamily="@font/roboto"
        android:text="@string/color_my_view_app_how_to_play_button"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/color_my_view_label_content"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/color_my_view_label_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_wide"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/color_my_view_app_tap_box_and_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/color_my_view_label_text"
        app:layout_constraintTop_toBottomOf="@+id/color_my_view_box_2"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/color_my_view_red_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_my_view_app_red_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/color_my_view_yellow_button"
        app:layout_constraintEnd_toStartOf="@+id/color_my_view_yellow_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/color_my_view_yellow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_wide"
        android:text="@string/color_my_view_app_yellow_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/color_my_view_green_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/color_my_view_red_button"
        app:layout_constraintTop_toBottomOf="@+id/color_my_view_box_2"
        app:layout_constraintVertical_bias="1"
        tools:layout_editor_absoluteY="640dp" />

    <Button
        android:id="@+id/color_my_view_green_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_my_view_app_green_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/color_my_view_yellow_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/color_my_view_yellow_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
