<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LauncherActivity"
        android:background="@drawable/ic_kotlin_logo">

        <Button
            android:id="@+id/dice_app_launch_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="30dp"
            android:text="@string/dice_app_name"
            android:textColor="@color/guess_the_word_black_text_color"
            android:onClick="navigateToNextPage" />

        <Button
            android:id="@+id/color_my_view_app_launch_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dice_app_launch_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="30dp"
            android:text="@string/color_my_view_app_name"
            android:textColor="@color/guess_the_word_black_text_color"
            android:onClick="navigateToNextPage" />

        <Button
            android:id="@+id/trivia_launch_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/color_my_view_app_launch_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="30dp"
            android:text="@string/android_trivia_app_name"
            android:textColor="@color/guess_the_word_black_text_color"
            android:onClick="navigateToNextPage" />

        <Button
            android:id="@+id/guess_the_word_launch_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/trivia_launch_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="30dp"
            android:text="@string/guess_the_word_skip_app_name"
            android:textColor="@color/guess_the_word_black_text_color"
            android:onClick="navigateToNextPage" />

        <Button
            android:id="@+id/track_my_sleep_quality_launch_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/guess_the_word_launch_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="30dp"
            android:text="@string/track_my_sleep_quality"
            android:textColor="@color/guess_the_word_black_text_color"
            android:onClick="navigateToNextPage" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>